<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name: </string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="group_size">Group Size:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="table_area">Table Area:</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="non_smoking_area">Non-Smoking Area</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="smoking">Smoking</string>
</resources>
